[Add] Add themes for hass

--- a/.gitignore
+++ b/.gitignore
@@ -11,6 +11,7 @@
 # Ignore file with suffix name
 *.log
 *.db
+*.uuid
 
 # Ensure these YAML files are ignored, otherwise your secret data/credentials will leak.
 ip_bans.yaml
