--- a/configuration.yaml
+++ b/configuration.yaml
@@ -36,7 +36,7 @@ homeassistant:
 #################################################################
 frontend:
   themes: !include_dir_merge_named themes
-  javascript_version: latest
+  # javascript_version: latest
   extra_html_url:
     - /local/custom_ui/fontawesome/hass-fontawesome-solid.html
     - /local/custom_ui/fontawesome/hass-fontawesome-regular.html
